Switch to RESTEasy Reactive in the documentation

--- a/docs/modules/ROOT/pages/amazon-kms.adoc
+++ b/docs/modules/ROOT/pages/amazon-kms.adoc
@@ -89,11 +89,11 @@ mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \
     -DprojectArtifactId=amazon-kms-quickstart \
     -DclassName="org.acme.kms.QuarkusKmsSyncResource" \
     -Dpath="/sync" \
-    -Dextensions="resteasy,resteasy-jackson,amazon-kms,resteasy-mutiny"
+    -Dextensions="resteasy-reactive-jackson,amazon-kms"
 cd amazon-kms-quickstart
 ----
 
-This command generates a Maven structure importing the RESTEasy/JAX-RS, Mutiny and Amazon KMS Client extensions.
+This command generates a Maven structure importing the RESTEasy Reactive/JAX-RS and Amazon KMS Client extensions.
 After this, the `amazon-kms` extension has been added to your `pom.xml` as well as the Mutiny support for RESTEasy.
 
 == Creating JSON REST service
@@ -107,13 +107,13 @@ Let's create a `org.acme.kms.QuarkusKmsSyncResource` that will provide an API to
 ----
 package org.acme.kms;
 
+import java.util.Base64;
 import javax.inject.Inject;
 import javax.ws.rs.Consumes;
 import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
-import org.apache.commons.codec.binary.Base64;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
 import software.amazon.awssdk.core.SdkBytes;
 import software.amazon.awssdk.services.kms.KmsClient;
@@ -135,13 +135,13 @@ public class QuarkusKmsSyncResource {
     public String encrypt(String data) {
         SdkBytes encryptedBytes = kms.encrypt(req -> req.keyId(keyArn).plaintext(SdkBytes.fromUtf8String(data))).ciphertextBlob();
 
-        return Base64.encodeBase64String(encryptedBytes.asByteArray());
+        return Base64.getEncoder().encodeToString(encryptedBytes.asByteArray());
     }
 
     @POST
     @Path("/decrypt")
     public String decrypt(String data) {
-        SdkBytes encryptedData = SdkBytes.fromByteArray(Base64.decodeBase64(data.getBytes()));
+        SdkBytes encryptedData = SdkBytes.fromByteArray(Base64.getDecoder().decode(data.getBytes()));
         DecryptResponse decrypted = kms.decrypt(req -> req.keyId(keyArn).ciphertextBlob(encryptedData));
 
         return decrypted.plaintext().asUtf8String();
@@ -227,15 +227,15 @@ Create a `org.acme.kms.QuarkusKmsAsyncResource` REST resource that will be simil
 ----
 package org.acme.kms;
 
-import io.smallrye.mutiny.Uni;
+import java.util.Base64;
 import javax.inject.Inject;
 import javax.ws.rs.Consumes;
 import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
-import org.apache.commons.codec.binary.Base64;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
+import io.smallrye.mutiny.Uni;
 import software.amazon.awssdk.core.SdkBytes;
 import software.amazon.awssdk.services.kms.KmsAsyncClient;
 import software.amazon.awssdk.services.kms.model.DecryptResponse;
@@ -257,15 +257,15 @@ public class QuarkusKmsAsyncResource {
     public Uni<String> encrypt(String data) {
         return Uni.createFrom().completionStage(kms.encrypt(req -> req.keyId(keyArn).plaintext(SdkBytes.fromUtf8String(data))))
             .onItem().transform(EncryptResponse::ciphertextBlob)
-            .onItem().transform(blob -> Base64.encodeBase64String(blob.asByteArray()));
+            .onItem().transform(blob -> Base64.getEncoder().encodeToString(blob.asByteArray()));
     }
 
     @POST
     @Path("/decrypt")
     public Uni<String> decrypt(String data) {
-        return Uni.createFrom().item(SdkBytes.fromByteArray(Base64.decodeBase64(data.getBytes())))
+        return Uni.createFrom().item(SdkBytes.fromByteArray(Base64.getDecoder().decode(data.getBytes())))
             .onItem().transformToUni(msg ->
-                Uni.createFrom().completionStage(kms.decrypt(req -> req.keyId(keyArn).ciphertextBlob(msg)))
+                        Uni.createFrom().completionStage(kms.decrypt(req -> req.keyId(keyArn).ciphertextBlob(msg)))
             )
             .onItem().transform(DecryptResponse::plaintext)
             .onItem().transform(SdkBytes::asUtf8String);
