--- a/docs/modules/ROOT/pages/amazon-dynamodb.adoc
+++ b/docs/modules/ROOT/pages/amazon-dynamodb.adoc
@@ -97,11 +97,11 @@ mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \
     -DprojectArtifactId=amazon-dynamodb-quickstart \
     -DclassName="org.acme.dynamodb.FruitResource" \
     -Dpath="/fruits" \
-    -Dextensions="resteasy,resteasy-jackson,amazon-dynamodb,resteasy-mutiny"
+    -Dextensions="resteasy-reactive-jackson,amazon-dynamodb"
 cd amazon-dynamodb-quickstart
 ----
 
-This command generates a Maven structure importing the RESTEasy/JAX-RS, Mutiny and DynamoDB Client extensions.
+This command generates a Maven structure importing the RESTEasy Reactive/JAX-RS and DynamoDB Client extensions.
 After this, the `amazon-dynamodb` extension has been added to your `pom.xml` as well as the Mutiny support for RESTEasy.
 
 == Creating JSON REST service
