--- a/docs/modules/ROOT/pages/amazon-s3.adoc
+++ b/docs/modules/ROOT/pages/amazon-s3.adoc
@@ -82,22 +82,12 @@ mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \
     -DprojectArtifactId=amazon-s3-quickstart \
     -DclassName="org.acme.s3.S3SyncClientResource" \
     -Dpath="/s3" \
-    -Dextensions="resteasy,resteasy-jackson,amazon-s3"
+    -Dextensions="resteasy-reactive-jackson,amazon-s3"
 cd amazon-s3-quickstart
 ----
 
-This command generates a Maven structure importing the RESTEasy/JAX-RS and S3 Client extensions.
+This command generates a Maven structure importing the RESTEasy Reactive/JAX-RS and S3 Client extensions.
 After this, the `amazon-s3` extension has been added to your `pom.xml`.
-
-Then, we'll add the following dependency to support `multipart/form-data` requests:
-
-[source,xml]
-----
-<dependency>
-    <groupId>io.quarkus</groupId>
-    <artifactId>quarkus-resteasy-multipart</artifactId>
-</dependency>
-----
 
 NOTE: The default setting for `quarkus.http.limits.max-body-size` is 10240K. This may limit your ability to upload multipart files larger than the default. If you want to upload larger files, you will need to set this limit explicitly.
 
@@ -106,7 +96,7 @@ NOTE: The default setting for `quarkus.http.limits.max-body-size` is 10240K. Thi
 In this example, we will create an application to manage a list of files. The example application will demonstrate the two programming models supported by the extension.
 
 Because the primary goal of our application is to upload a file into the S3 bucket, we need to setup the model we will be using to define the `multipart/form-data` payload,
-in the form of a `MultipartBody` POJO.
+in the form of a `@MultipartForm` POJO.
 
 Create a `org.acme.s3.FormData` class as follows:
 
@@ -114,26 +104,23 @@ Create a `org.acme.s3.FormData` class as follows:
 ----
 package org.acme.s3;
 
-import java.io.InputStream;
-
-import javax.ws.rs.FormParam;
+import java.io.File;
 import javax.ws.rs.core.MediaType;
-
-import org.jboss.resteasy.annotations.providers.multipart.PartType;
+import org.jboss.resteasy.reactive.PartType;
+import org.jboss.resteasy.reactive.RestForm;
 
 public class FormData {
 
-    @FormParam("file")
-    @PartType(MediaType.APPLICATION_OCTET_STREAM)
-    public InputStream data;
+    @RestForm("file")
+    public File data;
 
-    @FormParam("filename")
+    @RestForm
     @PartType(MediaType.TEXT_PLAIN)
-    public String fileName;
+    public String filename;
 
-    @FormParam("mimetype")
+    @RestForm
     @PartType(MediaType.TEXT_PLAIN)
-    public String mimeType;
+    public String mimetype;
 
 }
 ----
@@ -201,20 +188,12 @@ Note a configuration property `bucket.name` is defined here as the request metho
 ----
 package org.acme.s3;
 
-import java.io.File;
-import java.io.InputStream;
-import java.nio.file.Files;
-import java.nio.file.StandardCopyOption;
-import java.util.Date;
-import java.util.UUID;
-
 import org.eclipse.microprofile.config.inject.ConfigProperty;
 
 import software.amazon.awssdk.services.s3.model.GetObjectRequest;
 import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 
 abstract public class CommonResource {
-    private final static String TEMP_DIR = System.getProperty("java.io.tmpdir");
 
     @ConfigProperty(name = "bucket.name")
     String bucketName;
@@ -222,8 +201,8 @@ abstract public class CommonResource {
     protected PutObjectRequest buildPutRequest(FormData formData) {
         return PutObjectRequest.builder()
                 .bucket(bucketName)
-                .key(formData.fileName)
-                .contentType(formData.mimeType)
+                .key(formData.filename)
+                .contentType(formData.mimetype)
                 .build();
     }
 
@@ -234,23 +213,6 @@ abstract public class CommonResource {
                 .build();
     }
 
-    protected File tempFilePath() {
-        return new File(TEMP_DIR, new StringBuilder().append("s3AsyncDownloadedTemp")
-                .append((new Date()).getTime()).append(UUID.randomUUID())
-                .append(".").append(".tmp").toString());
-    }
-
-    protected File uploadToTemp(InputStream data) {
-        File tempPath;
-        try {
-            tempPath = File.createTempFile("uploadS3Tmp", ".tmp");
-            Files.copy(data, tempPath.toPath(), StandardCopyOption.REPLACE_EXISTING);
-        } catch (Exception ex) {
-            throw new RuntimeException(ex);
-        }
-
-        return tempPath;
-    }
 }
 ----
 
@@ -260,11 +222,9 @@ Then, create a `org.acme.s3.S3SyncClientResource` that will provides an API to u
 ----
 package org.acme.s3;
 
-import java.io.ByteArrayOutputStream;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
-
 import javax.inject.Inject;
 import javax.ws.rs.Consumes;
 import javax.ws.rs.GET;
@@ -275,18 +235,14 @@ import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.ResponseBuilder;
 import javax.ws.rs.core.Response.Status;
-import javax.ws.rs.core.StreamingOutput;
-
-import org.jboss.resteasy.annotations.jaxrs.PathParam;
-import org.jboss.resteasy.annotations.providers.multipart.MultipartForm;
-
+import org.jboss.resteasy.reactive.MultipartForm;
+import software.amazon.awssdk.core.ResponseBytes;
 import software.amazon.awssdk.core.sync.RequestBody;
-import software.amazon.awssdk.core.sync.ResponseTransformer;
 import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.GetObjectResponse;
 import software.amazon.awssdk.services.s3.model.ListObjectsRequest;
 import software.amazon.awssdk.services.s3.model.PutObjectResponse;
-import software.amazon.awssdk.services.s3.model.S3Object;
+
 
 @Path("/s3")
 public class S3SyncClientResource extends CommonResource {
@@ -298,16 +254,16 @@ public class S3SyncClientResource extends CommonResource {
     @Consumes(MediaType.MULTIPART_FORM_DATA)
     public Response uploadFile(@MultipartForm FormData formData) throws Exception {
 
-        if (formData.fileName == null || formData.fileName.isEmpty()) {
+        if (formData.filename == null || formData.filename.isEmpty()) {
             return Response.status(Status.BAD_REQUEST).build();
         }
 
-        if (formData.mimeType == null || formData.mimeType.isEmpty()) {
+        if (formData.mimetype == null || formData.mimetype.isEmpty()) {
             return Response.status(Status.BAD_REQUEST).build();
         }
 
         PutObjectResponse putResponse = s3.putObject(buildPutRequest(formData),
-                RequestBody.fromFile(uploadToTemp(formData.data)));
+                RequestBody.fromFile(formData.data));
         if (putResponse != null) {
             return Response.ok().status(Status.CREATED).build();
         } else {
@@ -318,23 +274,24 @@ public class S3SyncClientResource extends CommonResource {
     @GET
     @Path("download/{objectKey}")
     @Produces(MediaType.APPLICATION_OCTET_STREAM)
-    public Response downloadFile(@PathParam("objectKey") String objectKey) {
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        GetObjectResponse object = s3.getObject(buildGetRequest(objectKey), ResponseTransformer.toOutputStream(baos));
-
-        ResponseBuilder response = Response.ok((StreamingOutput) output -> baos.writeTo(output));
+    public Response downloadFile(String objectKey) {
+        ResponseBytes<GetObjectResponse> objectBytes = s3.getObjectAsBytes(buildGetRequest(objectKey));
+        ResponseBuilder response = Response.ok(objectBytes.asUtf8String());
         response.header("Content-Disposition", "attachment;filename=" + objectKey);
-        response.header("Content-Type", object.contentType());
+        response.header("Content-Type", objectBytes.response().contentType());
         return response.build();
     }
 
     @GET
+    @Produces(MediaType.APPLICATION_JSON)
     public List<FileObject> listFiles() {
         ListObjectsRequest listRequest = ListObjectsRequest.builder().bucket(bucketName).build();
 
         //HEAD S3 objects to get metadata
-        return s3.listObjects(listRequest).contents().stream().sorted(Comparator.comparing(S3Object::lastModified).reversed())
-                .map(FileObject::from).collect(Collectors.toList());
+        return s3.listObjects(listRequest).contents().stream()
+                .map(FileObject::from)
+                .sorted(Comparator.comparing(FileObject::getObjectKey))
+                .collect(Collectors.toList());
     }
 }
 ----
@@ -442,11 +399,10 @@ Create a `org.acme.s3.S3AsyncClientResource` that will be similar to our `S3Sync
 ----
 package org.acme.s3;
 
-import java.io.File;
+import io.smallrye.mutiny.Uni;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
-
 import javax.inject.Inject;
 import javax.ws.rs.Consumes;
 import javax.ws.rs.GET;
@@ -456,17 +412,12 @@ import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.Status;
-
-import org.jboss.resteasy.annotations.jaxrs.PathParam;
-import org.jboss.resteasy.annotations.providers.multipart.MultipartForm;
-
-import io.smallrye.mutiny.Uni;
+import org.jboss.resteasy.reactive.MultipartForm;
 import software.amazon.awssdk.core.async.AsyncRequestBody;
 import software.amazon.awssdk.core.async.AsyncResponseTransformer;
 import software.amazon.awssdk.services.s3.S3AsyncClient;
 import software.amazon.awssdk.services.s3.model.ListObjectsRequest;
 import software.amazon.awssdk.services.s3.model.ListObjectsResponse;
-import software.amazon.awssdk.services.s3.model.S3Object;
 
 @Path("/async-s3")
 public class S3AsyncClientResource extends CommonResource {
@@ -478,17 +429,17 @@ public class S3AsyncClientResource extends CommonResource {
     @Consumes(MediaType.MULTIPART_FORM_DATA)
     public Uni<Response> uploadFile(@MultipartForm FormData formData) throws Exception {
 
-        if (formData.fileName == null || formData.fileName.isEmpty()) {
+        if (formData.filename == null || formData.filename.isEmpty()) {
             return Uni.createFrom().item(Response.status(Status.BAD_REQUEST).build());
         }
 
-        if (formData.mimeType == null || formData.mimeType.isEmpty()) {
+        if (formData.mimetype == null || formData.mimetype.isEmpty()) {
             return Uni.createFrom().item(Response.status(Status.BAD_REQUEST).build());
         }
 
         return Uni.createFrom()
                 .completionStage(() -> {
-                    return s3.putObject(buildPutRequest(formData), AsyncRequestBody.fromFile(uploadToTemp(formData.data)));
+                    return s3.putObject(buildPutRequest(formData), AsyncRequestBody.fromFile(formData.data));
                 })
                 .onItem().ignore().andSwitchTo(Uni.createFrom().item(Response.created(null).build()))
                 .onFailure().recoverWithItem(th -> {
@@ -500,18 +451,17 @@ public class S3AsyncClientResource extends CommonResource {
     @GET
     @Path("download/{objectKey}")
     @Produces(MediaType.APPLICATION_OCTET_STREAM)
-    public Uni<Response> downloadFile(@PathParam("objectKey") String objectKey) throws Exception {
-        File tempFile = tempFilePath();
-
+    public Uni<Response> downloadFile(String objectKey) {
         return Uni.createFrom()
-                .completionStage(() -> s3.getObject(buildGetRequest(objectKey), AsyncResponseTransformer.toFile(tempFile)))
+                .completionStage(() -> s3.getObject(buildGetRequest(objectKey), AsyncResponseTransformer.toBytes()))
                 .onItem()
-                .transform(object -> Response.ok(tempFile)
+                .transform(object -> Response.ok(object.asUtf8String())
                         .header("Content-Disposition", "attachment;filename=" + objectKey)
-                        .header("Content-Type", object.contentType()).build());
+                        .header("Content-Type", object.response().contentType()).build());
     }
 
     @GET
+    @Produces(MediaType.APPLICATION_JSON)
     public Uni<List<FileObject>> listFiles() {
         ListObjectsRequest listRequest = ListObjectsRequest.builder()
                 .bucket(bucketName)
@@ -523,30 +473,14 @@ public class S3AsyncClientResource extends CommonResource {
 
     private List<FileObject> toFileItems(ListObjectsResponse objects) {
         return objects.contents().stream()
-                .sorted(Comparator.comparing(S3Object::lastModified).reversed())
-                .map(FileObject::from).collect(Collectors.toList());
+                .map(FileObject::from)
+                .sorted(Comparator.comparing(FileObject::getObjectKey))
+                .collect(Collectors.toList());
     }
 }
 ----
 
-You need the RESTEasy Mutiny support for asynchronous programming. Add the dependency to the `pom.xml`:
-
-[source,xml]
-----
-<dependency>
-    <groupId>io.quarkus</groupId>
-    <artifactId>quarkus-resteasy-mutiny</artifactId>
-</dependency>
-----
-
-Or you can alternatively run this command in your project base directory:
-
-[source,bash]
-----
-./mvnw quarkus:add-extension -Dextensions="resteasy-mutiny"
-----
-
-And add the Netty HTTP client dependency to the `pom.xml`:
+And we need to add the Netty HTTP client dependency to the `pom.xml`:
 
 [source,xml]
 ----
