--- a/docs/modules/ROOT/pages/amazon-sns.adoc
+++ b/docs/modules/ROOT/pages/amazon-sns.adoc
@@ -86,11 +86,11 @@ mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \
     -DprojectArtifactId=amazon-sns-quickstart \
     -DclassName="org.acme.sns.QuarksCannonSyncResource" \
     -Dpath="/sync-cannon" \
-    -Dextensions="resteasy,resteasy-jackson,amazon-sns,resteasy-mutiny"
+    -Dextensions="resteasy-reactive-jackson,amazon-sns"
 cd amazon-sns-quickstart
 ----
 
-This command generates a Maven structure importing the RESTEasy/JAX-RS, Mutiny and Amazon SNS Client extensions.
+This command generates a Maven structure importing the RESTEasy Reactive/JAX-RS and Amazon SNS Client extensions.
 After this, the `amazon-sns` extension has been added to your `pom.xml` as well as the Mutiny support for RESTEasy.
 
 == Creating JSON REST service
