--- a/docs/modules/ROOT/pages/amazon-ssm.adoc
+++ b/docs/modules/ROOT/pages/amazon-ssm.adoc
@@ -68,11 +68,11 @@ mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \
     -DprojectArtifactId=amazon-ssm-quickstart \
     -DclassName="org.acme.ssm.QuarkusSsmSyncResource" \
     -Dpath="/sync" \
-    -Dextensions="resteasy,resteasy-jackson,amazon-ssm,resteasy-mutiny"
+    -Dextensions="resteasy-reactive-jackson,amazon-ssm"
 cd amazon-ssm-quickstart
 ----
 
-This command generates a Maven structure importing the RESTEasy/JAX-RS, Mutiny and Amazon SSM Client extensions.
+This command generates a Maven structure importing the RESTEasy Reactive/JAX-RS and Amazon SSM Client extensions.
 After this, the `amazon-ssm` extension has been added to your `pom.xml` as well as the Mutiny support for RESTEasy.
 
 == Creating JSON REST service
