--- a/docs/modules/ROOT/pages/amazon-ssm.adoc
+++ b/docs/modules/ROOT/pages/amazon-ssm.adoc
@@ -167,10 +167,10 @@ import javax.ws.rs.DefaultValue;
 import javax.ws.rs.GET;
 import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.MediaType;
+
+import org.jboss.resteasy.reactive.RestQuery;
 
 import software.amazon.awssdk.services.ssm.SsmClient;
 
@@ -190,8 +190,8 @@ public class QuarkusSsmSyncResource extends QuarkusSsmResource {
     @PUT
     @Path("/{name}")
     @Consumes(MediaType.TEXT_PLAIN)
-    public void setParameter(@PathParam("name") String name,
-            @QueryParam("secure") @DefaultValue("false") boolean secure,
+    public void setParameter(String name,
+            @RestQuery("secure") @DefaultValue("false") boolean secure,
             String value) {
 
         ssm.putParameter(generatePutParameterRequest(name, value, secure));
@@ -200,7 +200,7 @@ public class QuarkusSsmSyncResource extends QuarkusSsmResource {
     @GET
     @Path("/{name}")
     @Produces(MediaType.TEXT_PLAIN)
-    public String getParameter(@PathParam("name") String name) {
+    public String getParameter(String name) {
         return ssm.getParameter(generateGetParameterRequest(name))
                 .parameter().value();
     }
@@ -296,12 +296,11 @@ import javax.ws.rs.DefaultValue;
 import javax.ws.rs.GET;
 import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.MediaType;
 
 import io.smallrye.mutiny.Uni;
+import org.jboss.resteasy.reactive.RestQuery;
 import software.amazon.awssdk.services.ssm.SsmAsyncClient;
 
 @Path("/async")
@@ -320,8 +319,8 @@ public class QuarkusSsmAsyncResource extends QuarkusSsmResource {
     @PUT
     @Path("/{name}")
     @Consumes(MediaType.TEXT_PLAIN)
-    public Uni<Void> setParameter(@PathParam("name") String name,
-            @QueryParam("secure") @DefaultValue("false") boolean secure,
+    public Uni<Void> setParameter(String name,
+            @RestQuery("secure") @DefaultValue("false") boolean secure,
             String value) {
 
         return Uni.createFrom().completionStage(ssm.putParameter(generatePutParameterRequest(name, value, secure)))
@@ -331,7 +330,7 @@ public class QuarkusSsmAsyncResource extends QuarkusSsmResource {
     @GET
     @Path("/{name}")
     @Produces(MediaType.TEXT_PLAIN)
-    public Uni<String> getParameter(@PathParam("name") String name) {
+    public Uni<String> getParameter(String name) {
         return Uni.createFrom().completionStage(ssm.getParameter(generateGetParameterRequest(name)))
                 .onItem().transform(r -> r.parameter().value());
     }
