--- a/docs/modules/ROOT/pages/amazon-secretsmanager.adoc
+++ b/docs/modules/ROOT/pages/amazon-secretsmanager.adoc
@@ -140,9 +140,7 @@ import javax.ws.rs.DefaultValue;
 import javax.ws.rs.GET;
 import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.MediaType;
 
 import software.amazon.awssdk.services.secretsmanager.SecretsManagerClient;
@@ -162,7 +160,7 @@ public class QuarkusSecretsManagerSyncResource extends QuarkusSsmResource {
     @POST
     @Path("/{name}")
     @Consumes(MediaType.TEXT_PLAIN)
-    public void createSecret(@PathParam("name") String name, String value) {
+    public void createSecret(String name, String value) {
         secretsManagerClient.createSecret(generateCreateSecretRequest(name, secret));
     }
 
@@ -258,9 +256,7 @@ import javax.ws.rs.DefaultValue;
 import javax.ws.rs.GET;
 import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.MediaType;
 
 import io.smallrye.mutiny.Uni;
@@ -282,7 +278,7 @@ public class QuarkusSecretsManagerAsyncResource extends QuarkusSecretsManagerRes
     @PUT
     @Path("/{name}")
     @Consumes(MediaType.TEXT_PLAIN)
-    public Uni<Void> createSecret(@PathParam("name") String name, String value) {
+    public Uni<Void> createSecret(String name, String value) {
 
         return Uni.createFrom().completionStage(secretsManagerAsyncClient.createSecret(generateCreateSecretRequest(name, secret)))
                 .onItem().transform(r -> null);
