--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-s3.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-s3.adoc
@@ -236,6 +236,15 @@ AWS Secret access key
 |
 
 
+a| [[quarkus-amazon-s3_quarkus.s3.aws.credentials.static-provider.session-token]]`link:#quarkus-amazon-s3_quarkus.s3.aws.credentials.static-provider.session-token[quarkus.s3.aws.credentials.static-provider.session-token]`
+
+[.description]
+--
+AWS Session token
+--|string 
+|
+
+
 h|[[quarkus-amazon-s3_quarkus.s3.aws.credentials.profile-provider-aws-profile-credentials-provider-configuration]]link:#quarkus-amazon-s3_quarkus.s3.aws.credentials.profile-provider-aws-profile-credentials-provider-configuration[AWS Profile credentials provider configuration]
 
 h|Type
