--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-s3.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-s3.adoc
@@ -34,6 +34,53 @@ Environment variable: `+++QUARKUS_S3_SYNC_CLIENT_TYPE+++`
 |`url`
 
 
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-s3_quarkus.s3.devservices.enabled]]`link:#quarkus-amazon-s3_quarkus.s3.devservices.enabled[quarkus.s3.devservices.enabled]`
+
+[.description]
+--
+If local stack based dev services should be used. This requires expliect config rather than being activated by a lack of config for dev services, as AWS is a singleton and does not seen to be configured in the same way as other services. If this is true then a localstack S3 container will be started and will be used instead of AWS.
+
+Environment variable: `+++QUARKUS_S3_DEVSERVICES_ENABLED+++`
+--|boolean 
+|
+
+
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-s3_quarkus.s3.devservices.shared]]`link:#quarkus-amazon-s3_quarkus.s3.devservices.shared[quarkus.s3.devservices.shared]`
+
+[.description]
+--
+Indicates if the localstack managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Kafka starts a new container. 
+ The discovery uses the `quarkus-dev-service-localstack-s3` label. The value is configured using the `service-name` property. 
+ Container sharing is only used in dev mode.
+
+Environment variable: `+++QUARKUS_S3_DEVSERVICES_SHARED+++`
+--|boolean 
+|`true`
+
+
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-s3_quarkus.s3.devservices.service-name]]`link:#quarkus-amazon-s3_quarkus.s3.devservices.service-name[quarkus.s3.devservices.service-name]`
+
+[.description]
+--
+The value of the `quarkus-dev-service-localstack-s3` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for S3 looks for a container with the `quarkus-dev-service-localstack-s3` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-localstack-s3` label set to the specified value. 
+ This property is used when you need multiple shared S3 instances.
+
+Environment variable: `+++QUARKUS_S3_DEVSERVICES_SERVICE_NAME+++`
+--|string 
+|`localstack`
+
+
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-s3_quarkus.s3.devservices.buckets]]`link:#quarkus-amazon-s3_quarkus.s3.devservices.buckets[quarkus.s3.devservices.buckets]`
+
+[.description]
+--
+The buckets to create on startup.
+
+Environment variable: `+++QUARKUS_S3_DEVSERVICES_BUCKETS+++`
+--|list of string 
+|`default`
+
+
 a| [[quarkus-amazon-s3_quarkus.s3.accelerate-mode]]`link:#quarkus-amazon-s3_quarkus.s3.accelerate-mode[quarkus.s3.accelerate-mode]`
 
 [.description]
@@ -110,6 +157,17 @@ Define the profile name that should be consulted to determine the default value 
 
 Environment variable: `+++QUARKUS_S3_PROFILE_NAME+++`
 --|string 
+|
+
+
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-s3_quarkus.s3.devservices.container-properties-container-properties]]`link:#quarkus-amazon-s3_quarkus.s3.devservices.container-properties-container-properties[quarkus.s3.devservices.container-properties]`
+
+[.description]
+--
+Generic properties that are pass for additional container configuration.
+
+Environment variable: `+++QUARKUS_S3_DEVSERVICES_CONTAINER_PROPERTIES+++`
+--|`Map<String,String>` 
 |
 
 
