--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-sqs.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-sqs.adoc
@@ -34,6 +34,53 @@ Environment variable: `+++QUARKUS_SQS_SYNC_CLIENT_TYPE+++`
 |`url`
 
 
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-sqs_quarkus.sqs.devservices.enabled]]`link:#quarkus-amazon-sqs_quarkus.sqs.devservices.enabled[quarkus.sqs.devservices.enabled]`
+
+[.description]
+--
+If local stack based dev services should be used. This requires expliect config rather than being activated by a lack of config for dev services, as AWS is a singleton and does not seen to be configured in the same way as other services. If this is true then a localstack S3 container will be started and will be used instead of AWS.
+
+Environment variable: `+++QUARKUS_SQS_DEVSERVICES_ENABLED+++`
+--|boolean 
+|
+
+
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-sqs_quarkus.sqs.devservices.shared]]`link:#quarkus-amazon-sqs_quarkus.sqs.devservices.shared[quarkus.sqs.devservices.shared]`
+
+[.description]
+--
+Indicates if the localstack managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Kafka starts a new container. 
+ The discovery uses the `quarkus-dev-service-localstack-s3` label. The value is configured using the `service-name` property. 
+ Container sharing is only used in dev mode.
+
+Environment variable: `+++QUARKUS_SQS_DEVSERVICES_SHARED+++`
+--|boolean 
+|`true`
+
+
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-sqs_quarkus.sqs.devservices.service-name]]`link:#quarkus-amazon-sqs_quarkus.sqs.devservices.service-name[quarkus.sqs.devservices.service-name]`
+
+[.description]
+--
+The value of the `quarkus-dev-service-localstack-s3` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for S3 looks for a container with the `quarkus-dev-service-localstack-s3` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-localstack-s3` label set to the specified value. 
+ This property is used when you need multiple shared S3 instances.
+
+Environment variable: `+++QUARKUS_SQS_DEVSERVICES_SERVICE_NAME+++`
+--|string 
+|`localstack`
+
+
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-sqs_quarkus.sqs.devservices.container-properties-container-properties]]`link:#quarkus-amazon-sqs_quarkus.sqs.devservices.container-properties-container-properties[quarkus.sqs.devservices.container-properties]`
+
+[.description]
+--
+Generic properties that are pass for additional container configuration.
+
+Environment variable: `+++QUARKUS_SQS_DEVSERVICES_CONTAINER_PROPERTIES+++`
+--|`Map<String,String>` 
+|
+
+
 h|[[quarkus-amazon-sqs_quarkus.sqs.sdk-aws-sdk-client-configurations]]link:#quarkus-amazon-sqs_quarkus.sqs.sdk-aws-sdk-client-configurations[AWS SDK client configurations]
 
 h|Type
