fix: add support for hot reload

--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-secretsmanager.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-secretsmanager.adoc
@@ -38,7 +38,7 @@ a|icon:lock[title=Fixed at build time] [[quarkus-amazon-secretsmanager_quarkus.s
 
 [.description]
 --
-If local stack based dev services should be used. This requires expliect config rather than being activated by a lack of config for dev services, as AWS is a singleton and does not seen to be configured in the same way as other services. If this is true then a localstack S3 container will be started and will be used instead of AWS.
+If local stack based dev services should be used. (default to true) If this is true and endpoint-override is not configured then a LocalStack container will be started and will be used instead of the given configuration.
 
 Environment variable: `+++QUARKUS_SECRETSMANAGER_DEVSERVICES_ENABLED+++`
 --|boolean 
@@ -49,9 +49,8 @@ a|icon:lock[title=Fixed at build time] [[quarkus-amazon-secretsmanager_quarkus.s
 
 [.description]
 --
-Indicates if the localstack managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Kafka starts a new container. 
- The discovery uses the `quarkus-dev-service-localstack-s3` label. The value is configured using the `service-name` property. 
- Container sharing is only used in dev mode.
+Indicates if the localstack managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services starts a new container. 
+ The discovery uses the `quarkus-dev-service-localstack` label. The value is configured using the `service-name` property.
 
 Environment variable: `+++QUARKUS_SECRETSMANAGER_DEVSERVICES_SHARED+++`
 --|boolean 
@@ -62,8 +61,8 @@ a|icon:lock[title=Fixed at build time] [[quarkus-amazon-secretsmanager_quarkus.s
 
 [.description]
 --
-The value of the `quarkus-dev-service-localstack-s3` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for S3 looks for a container with the `quarkus-dev-service-localstack-s3` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-localstack-s3` label set to the specified value. 
- This property is used when you need multiple shared S3 instances.
+The value of the `quarkus-dev-service-localstack` label attached to the started container. In dev mode, when `shared` is set to `true`, before starting a container, Dev Services looks for a container with the `quarkus-dev-service-localstack` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-localstack` label set to the specified value. In test mode, Dev Services will group services with the same `service-name` value in one container instance. 
+ This property is used when you need multiple shared LocalStack instances.
 
 Environment variable: `+++QUARKUS_SECRETSMANAGER_DEVSERVICES_SERVICE_NAME+++`
 --|string 
@@ -185,7 +184,7 @@ Available values:
 Environment variable: `+++QUARKUS_SECRETSMANAGER_AWS_CREDENTIALS_TYPE+++`
 -- a|
 `default`, `static`, `system-property`, `env-variable`, `profile`, `container`, `instance-profile`, `process`, `anonymous` 
-|`default`
+|required icon:exclamation-circle[title=Configuration property is required]
 
 
 h|[[quarkus-amazon-secretsmanager_quarkus.secretsmanager.aws.credentials.default-provider-default-credentials-provider-configuration]]link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.aws.credentials.default-provider-default-credentials-provider-configuration[Default credentials provider configuration]
@@ -214,7 +213,7 @@ Whether the provider should reuse the last successful credentials provider in th
 
 Environment variable: `+++QUARKUS_SECRETSMANAGER_AWS_CREDENTIALS_DEFAULT_PROVIDER_REUSE_LAST_PROVIDER_ENABLED+++`
 --|boolean 
-|`true`
+|`false`
 
 
 h|[[quarkus-amazon-secretsmanager_quarkus.secretsmanager.aws.credentials.static-provider-static-credentials-provider-configuration]]link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.aws.credentials.static-provider-static-credentials-provider-configuration[Static credentials provider configuration]
@@ -299,7 +298,7 @@ The amount of time between when the credentials expire and when the credentials 
 Environment variable: `+++QUARKUS_SECRETSMANAGER_AWS_CREDENTIALS_PROCESS_PROVIDER_CREDENTIAL_REFRESH_THRESHOLD+++`
 --|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
   link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
-|`15S`
+|required icon:exclamation-circle[title=Configuration property is required]
 
 
 a| [[quarkus-amazon-secretsmanager_quarkus.secretsmanager.aws.credentials.process-provider.process-output-limit]]`link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.aws.credentials.process-provider.process-output-limit[quarkus.secretsmanager.aws.credentials.process-provider.process-output-limit]`
@@ -310,7 +309,7 @@ The maximum size of the output that can be returned by the external process befo
 
 Environment variable: `+++QUARKUS_SECRETSMANAGER_AWS_CREDENTIALS_PROCESS_PROVIDER_PROCESS_OUTPUT_LIMIT+++`
 --|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
-|`1024`
+|required icon:exclamation-circle[title=Configuration property is required]
 
 
 a| [[quarkus-amazon-secretsmanager_quarkus.secretsmanager.aws.credentials.process-provider.command]]`link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.aws.credentials.process-provider.command[quarkus.secretsmanager.aws.credentials.process-provider.command]`
@@ -424,7 +423,7 @@ Available providers:
 Environment variable: `+++QUARKUS_SECRETSMANAGER_SYNC_CLIENT_TLS_TRUST_MANAGERS_PROVIDER_TYPE+++`
 -- a|
 `trust-all`, `system-property`, `file-store` 
-|`system-property`
+|required icon:exclamation-circle[title=Configuration property is required]
 
 
 a| [[quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.tls-trust-managers-provider.file-store.path]]`link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.tls-trust-managers-provider.file-store.path[quarkus.secretsmanager.sync-client.tls-trust-managers-provider.file-store.path]`
@@ -475,7 +474,7 @@ The amount of time to wait when acquiring a connection from the pool before givi
 Environment variable: `+++QUARKUS_SECRETSMANAGER_SYNC_CLIENT_APACHE_CONNECTION_ACQUISITION_TIMEOUT+++`
 --|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
   link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
-|`10S`
+|required icon:exclamation-circle[title=Configuration property is required]
 
 
 a| [[quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.apache.connection-max-idle-time]]`link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.apache.connection-max-idle-time[quarkus.secretsmanager.sync-client.apache.connection-max-idle-time]`
@@ -487,7 +486,7 @@ The maximum amount of time that a connection should be allowed to remain open wh
 Environment variable: `+++QUARKUS_SECRETSMANAGER_SYNC_CLIENT_APACHE_CONNECTION_MAX_IDLE_TIME+++`
 --|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
   link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
-|`60S`
+|required icon:exclamation-circle[title=Configuration property is required]
 
 
 a| [[quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.apache.connection-time-to-live]]`link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.apache.connection-time-to-live[quarkus.secretsmanager.sync-client.apache.connection-time-to-live]`
@@ -511,7 +510,7 @@ The maximum number of connections allowed in the connection pool.
 
 Environment variable: `+++QUARKUS_SECRETSMANAGER_SYNC_CLIENT_APACHE_MAX_CONNECTIONS+++`
 --|int 
-|`50`
+|`0`
 
 
 a| [[quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.apache.expect-continue-enabled]]`link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.apache.expect-continue-enabled[quarkus.secretsmanager.sync-client.apache.expect-continue-enabled]`
@@ -522,7 +521,7 @@ Whether the client should send an HTTP expect-continue handshake before each req
 
 Environment variable: `+++QUARKUS_SECRETSMANAGER_SYNC_CLIENT_APACHE_EXPECT_CONTINUE_ENABLED+++`
 --|boolean 
-|`true`
+|`false`
 
 
 a| [[quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.apache.use-idle-connection-reaper]]`link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.apache.use-idle-connection-reaper[quarkus.secretsmanager.sync-client.apache.use-idle-connection-reaper]`
@@ -534,7 +533,7 @@ Whether the idle connections in the connection pool should be closed asynchronou
 
 Environment variable: `+++QUARKUS_SECRETSMANAGER_SYNC_CLIENT_APACHE_USE_IDLE_CONNECTION_REAPER+++`
 --|boolean 
-|`true`
+|`false`
 
 
 a| [[quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.apache.proxy.enabled]]`link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.sync-client.apache.proxy.enabled[quarkus.secretsmanager.sync-client.apache.proxy.enabled]`
@@ -911,7 +910,7 @@ Available providers:
 Environment variable: `+++QUARKUS_SECRETSMANAGER_ASYNC_CLIENT_TLS_TRUST_MANAGERS_PROVIDER_TYPE+++`
 -- a|
 `trust-all`, `system-property`, `file-store` 
-|`system-property`
+|required icon:exclamation-circle[title=Configuration property is required]
 
 
 a| [[quarkus-amazon-secretsmanager_quarkus.secretsmanager.async-client.tls-trust-managers-provider.file-store.path]]`link:#quarkus-amazon-secretsmanager_quarkus.secretsmanager.async-client.tls-trust-managers-provider.file-store.path[quarkus.secretsmanager.async-client.tls-trust-managers-provider.file-store.path]`
@@ -993,7 +992,7 @@ Whether the default thread pool should be used to complete the futures returned 
 
 Environment variable: `+++QUARKUS_SECRETSMANAGER_ASYNC_CLIENT_ADVANCED_USE_FUTURE_COMPLETION_THREAD_POOL+++`
 --|boolean 
-|`true`
+|`false`
 
 |===
 ifndef::no-duration-note[]
