--- a/docs/modules/ROOT/pages/amazon-secretsmanager.adoc
+++ b/docs/modules/ROOT/pages/amazon-secretsmanager.adoc
@@ -27,9 +27,13 @@ To complete this guide, you need:
 * An AWS Account to access the Secrets Manager service
 * Docker for your system to run Secrets Manager locally for testing purposes
 
-=== Set up Secrets Manager locally
+=== Provision Secrets Manager locally via Dev Services
 
-The easiest way to start working with Secrets Manager is to run a local instance as a container.
+The easiest way to start working with Secrets Manager is to run a local instance using Dev Services.
+
+=== Provision Secrets Manager locally manually
+
+You can also set up a local version of Secrets Manager manually, first start a LocalStack container:
 
 [source,bash,subs="verbatim,attributes"]
 ----
@@ -218,7 +222,7 @@ quarkus.secretsmanager.aws.credentials.static-provider.access-key-id=test-key
 quarkus.secretsmanager.aws.credentials.static-provider.secret-access-key=test-secret
 ----
 
-<1> Override the Secret Manager client to use localstack instead of the actual AWS service
+<1> Override the Secret Manager client to use LocalStack instead of the actual AWS service
 <2> Localstack defaults to `us-east-1`
 <3> The `static` credentials provider lets you set the `access-key-id` and `secret-access-key` directly
 
