--- a/docs/modules/ROOT/pages/amazon-sqs.adoc
+++ b/docs/modules/ROOT/pages/amazon-sqs.adoc
@@ -30,9 +30,13 @@ To complete this guide, you need:
 * An AWS Account to access the SQS service
 * Docker for your system to run SQS locally for testing purposes
 
-=== Set up SQS locally
+=== Provision SQS locally via Dev Services
 
-The easiest way to start working with SQS is to run a local instance as a container.
+The easiest way to start working with SQS is to run a local instance using Dev Services.
+
+=== Provision SQS locally manually
+
+You can also set up a local version of SQS manually, first start a LocalStack container:
 
 [source,bash,subs="verbatim,attributes"]
 ----
@@ -306,7 +310,7 @@ quarkus.sqs.aws.credentials.static-provider.access-key-id=test-key
 quarkus.sqs.aws.credentials.static-provider.secret-access-key=test-secret
 ----
 
-- `quarkus.sqs.aws.region` - It's required by the client, but since you're using a local SQS instance use `us-east-1` as it's a default region of localstack's SQS.
+- `quarkus.sqs.aws.region` - It's required by the client, but since you're using a local SQS instance use `us-east-1` as it's a default region of LocalStack's SQS.
 - `quarkus.sqs.aws.credentials.type` - Set `static` credentials provider with any values for `access-key-id` and `secret-access-key`
 - `quarkus.sqs.endpoint-override` - Override the SQS client to use a local instance instead of an AWS service
 
