--- a/docs/modules/ROOT/pages/amazon-cognitouserpools.adoc
+++ b/docs/modules/ROOT/pages/amazon-cognitouserpools.adoc
@@ -31,9 +31,13 @@ To complete this guide, you need:
 ** An AWS Account to access the Cognito service
 ** Or Docker for your system to run Cognito locally for testing purposes
 
-=== Set up Cognito locally
+=== Provision Cognito locally via Dev Services
 
-The easiest way to start working with Cognito is to run a local mock instance as a container.
+The easiest way to start working with Cognito is to run a local instance using Dev Services.
+
+=== Provision Cognito locally manually
+
+You can also set up a local version of Cognito manually, first start a local instance as a container:
 
 [source,bash,subs="verbatim,attributes"]
 ----
