--- a/docs/modules/ROOT/pages/amazon-dynamodb.adoc
+++ b/docs/modules/ROOT/pages/amazon-dynamodb.adoc
@@ -30,9 +30,13 @@ To complete this guide, you need:
 * An AWS Account to access the DynamoDB service
 * Optionally, Docker for your system to run DynamoDB locally for testing purposes
 
-=== Set up DynamoDB locally
+=== Provision DynamoDB locally via Dev Services
 
-The easiest way to start working with DynamoDB is to run a local instance as a container.
+The easiest way to start working with DynamoDB is to run a local instance using Dev Services.
+
+=== Provision DynamoDB locally manually
+
+You can also set up a local version of DynamoDB manually, first start a local instance as a container:
 
 [source,bash,subs="verbatim,attributes"]
 ----
