--- a/docs/modules/ROOT/pages/amazon-sns.adoc
+++ b/docs/modules/ROOT/pages/amazon-sns.adoc
@@ -29,9 +29,13 @@ To complete this guide, you need:
 * An AWS Account to access the SNS service
 * Optionally, Docker for your system to run SNS locally for testing purposes
 
-=== Set up SNS locally
+=== Provision SNS locally via Dev Services
 
-The easiest way to start working with SNS is to run a local instance as a container.
+The easiest way to start working with SNS is to run a local instance using Dev Services.
+
+=== Provision SNS locally manually
+
+You can also set up a local version of SNS manually, first start a LocalStack container:
 
 [source,bash,subs="verbatim,attributes"]
 ----
