--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-iam.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-iam.adoc
@@ -48,7 +48,7 @@ a|icon:lock[title=Fixed at build time] [[quarkus-amazon-iam_quarkus.iam.devservi
 
 [.description]
 --
-If local stack based dev services should be used. (default to true) If this is true and endpoint-override is not configured then a LocalStack container will be started and will be used instead of the given configuration.
+If a local AWS stack should be used. (default to true) If this is true and endpoint-override is not configured then a local AWS stack will be started and will be used instead of the given configuration. For all services but Cognito, the local AWS stack will be provided by LocalStack. Otherwise, it will be provided by MotoServer
 
 ifdef::add-copy-button-to-env-var[]
 Environment variable: env_var_with_copy_button:+++QUARKUS_IAM_DEVSERVICES_ENABLED+++[]
@@ -64,8 +64,9 @@ a|icon:lock[title=Fixed at build time] [[quarkus-amazon-iam_quarkus.iam.devservi
 
 [.description]
 --
-Indicates if the localstack managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services starts a new container. 
-The discovery uses the `quarkus-dev-service-localstack` label. The value is configured using the `service-name` property.
+Indicates if the LocalStack container managed by Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services starts a new container. 
+The discovery uses the `quarkus-dev-service-localstack` label. The value is configured using the `service-name` property. 
+Sharing is not supported for the Cognito extension.
 
 ifdef::add-copy-button-to-env-var[]
 Environment variable: env_var_with_copy_button:+++QUARKUS_IAM_DEVSERVICES_SHARED+++[]
